# Pretzel

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
assets/: assets.qrc
src/: CMakeLists.txt  main.cpp
src/framework/: CMakeLists.txt
src/framework/actions/: CMakeLists.txt  actioncontroller.cpp  actioncontroller.h  actions.qrc  papplication.cpp  papplication.h
src/framework/actions/qml/Pretzel/Framework/: QMLAction.qml  qmldir
src/framework/database/: CMakeLists.txt  databasehost.cpp  databasehost.h  items.cpp  items.h
src/framework/models/: CMakeLists.txt  itempropertiesmodel.cpp  itempropertiesmodel.h  itemsmodel.cpp  itemsmodel.h  profilesmodel.cpp  profilesmodel.h  propertiesmodel.cpp  propertiesmodel.h  stockmodel.cpp  stockmodel.h
src/framework/uicomponents/: CMakeLists.txt  uicomponents.qrc
src/framework/uicomponents/qml/Pretzel/UiComponents/: PButton.qml  PDropDown.qml  PLabel.qml  PLineEdit.qml  PListView.qml  PPopup.qml  PScrollBar.qml  PSpinBox.qml  PTextEdit.qml  qmldir
src/ui/: main.qml  ui.qrc
src/ui/delegates/: delegates.qrc
src/ui/delegates/qml/Pretzel/Delegates/: ItemsDelegate.qml  ProfilesDelegate.qml  PropertiesDelegate.qml  StockDelegate.qml  qmldir
src/ui/docks/: docks.qrc
src/ui/docks/qml/Pretzel/Docks/: HomeDock.qml  ItemsDock.qml  ProfilesDock.qml  StockDock.qml  qmldir
src/ui/register/: register.cpp  register.h
